--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,19 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+      <h1 class="mt-5"> 
+        Exercise: Code an Excuse Generator in Javascript</h1>
+
+      <div class="my_div">
+        <p>OMG! you will not believe me but...</p>
+        <p id="excuse"></p>
+
+        <button class="btn" id="my_button">
+          Click Me
+        </button>
+
+      </div>
+
       </div>
     </div>
   </body>
